# socketless-http

./: .gitignore  README.md  README_ja.md  main.py  plan.md  pyproject.toml
docs/: socketless-http-ai-editor-guide.md  spec.md
socketless_http/: __init__.py  ipc.py  pytest_plugin.py  switch.py  transport.py  worker.py
tests/: __init__.py  concurrency_app.py  sample_app.py  test_concurrency_app_asgi.py  test_ipc_transport.py  test_multithreaded.py  test_restart_policy.py  test_sample_app.py  test_switch.py  test_wsgi_support.py  wsgi_app.py
