[project]
name = "socketless-http"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref>=3.11.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "fastapi>=0.121.3",
    "flask>=3.1.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
